WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
207459
[watchOS] Notification listener is never unregistered
https://bugs.webkit.org/show_bug.cgi?id=207459
Summary
[watchOS] Notification listener is never unregistered
Per Arne Vollan
Reported
2020-02-10 07:16:21 PST
On watchOS, the backlight changed notification is registered in WebProcessPool::registerNotificationObservers(), but not unregistered in WebProcessPool::unregisterNotificationObservers().
Attachments
Patch
(1.88 KB, patch)
2020-02-10 07:22 PST
,
Per Arne Vollan
mjs
: review+
Details
Formatted Diff
Diff
Patch
(8.63 KB, patch)
2020-02-10 14:46 PST
,
Per Arne Vollan
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Per Arne Vollan
Comment 1
2020-02-10 07:17:29 PST
rdar://problem/58923393
Per Arne Vollan
Comment 2
2020-02-10 07:22:15 PST
Created
attachment 390250
[details]
Patch
Maciej Stachowiak
Comment 3
2020-02-10 11:14:22 PST
Comment on
attachment 390250
[details]
Patch Maybe worth making an API test in case they are run there some day, or in case we make this mistake on another platform? Code change looks fine but I suggest adding a test.
Per Arne Vollan
Comment 4
2020-02-10 12:51:11 PST
(In reply to Maciej Stachowiak from
comment #3
)
> Comment on
attachment 390250
[details]
> Patch > > Maybe worth making an API test in case they are run there some day, or in > case we make this mistake on another platform? > > Code change looks fine but I suggest adding a test.
Thanks for reviewing! I will look into adding a test.
Per Arne Vollan
Comment 5
2020-02-10 14:46:39 PST
Created
attachment 390297
[details]
Patch
WebKit Commit Bot
Comment 6
2020-02-10 15:49:20 PST
Comment on
attachment 390297
[details]
Patch Clearing flags on attachment: 390297 Committed
r256225
: <
https://trac.webkit.org/changeset/256225
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug